refactor: oh lawd it's cross-project